# VAdmin-backend

./: .bashrc  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  vadmin.env
VAdmin/: manage.py  pyproject.toml  zappa_settings.json
VAdmin/VAdmin/: asgi.py  urls.py  wsgi.py
VAdmin/VAdmin/settings/: __init__.py  settings_base.py  settings_prod.py
VAdmin/auto_workshop/: apps.py
VAdmin/auto_workshop/migrations/: 0001_initial.py  0002_initial.py
VAdmin/auto_workshop/models/: __init__.py  auto_workshop.py  garage.py  location.py  reference.py
VAdmin/auto_workshop/models/geo/: geo_city.py  geo_state.py
VAdmin/auto_workshop/serializers/: __init__.py  auto_workshop_serializer.py  garage_serializer.py
VAdmin/auto_workshop/views/: __init__.py  auto_workshop_api_view.py  garage_api_view.py
VAdmin/core/: authentication.py  urls.py
VAdmin/core/migrations/: 0001_initial.py  0002_alter_taller_nit.py
VAdmin/core/models/: __init__.py  auditor.py  person.py  property_card.py  taller.py  user.py  vehicle.py
VAdmin/core/serializers/: __init__.py  person_serializer.py  property_card_serializer.py  taller_serializer.py  vehicle_serializer.py
VAdmin/core/views/: __init__.py  person_api_view.py  property_card_api_view.py  taller_api_view.py  vehicle_api_view.py
