[tool.poetry]
package-mode=false
name = "checkup"
description = "Clinical workflow management."

[tool.poetry.scripts]
test = "python manage.py test --parallel auto --keepdb"
retest = "python manage.py test --parallel auto"

[tool.poetry.dependencies]
boto3 = "^1.28.62"
botocore = "^1.31.62"
python = "~3.11.8"
Django = "4.2.11"
coreapi = "^2.3.3"
django-cors-headers = "^4.3.1"
djangorestframework = "3.14.0"
django-storages = "^1.14.2"
django-filter = "^24.2"
django-rest-passwordreset = "^1.4.0"
django-rest-polymorphic = "^0.1.10"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework-datatables = "^0.7.1"
openpyxl = "^3.1.2"
psycopg2-binary = "^2.9.9"
pydash = "^8.0.1"
python-social-auth = "^0.3.6"
rarfile = "^4.2"
social-auth-app-django = "^5.4.0"
sentry-sdk = "^1.44.1"
xhtml2pdf = "^0.2.15"
xlrd = "^2.0.1"
zappa = "^0.59.0"
drf-yasg = "1.21.7"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
coverage = "^7.4.4"
tblib = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ['.']
skip_glob = ["migrations/*"]